--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,32 @@
+
+.nav a:hover{
+    background-color: rgb(71, 89, 136);
+}
+
 h1 {
     font-size: 45px;
+}
+.col-sm-8 p {
+    font-size: 25px;
+    text-align: justify;
+}
+
+/* button */
+button {
+    width: 150px;
+    background-color: rgb(8, 8, 8);
+    border-radius: 5px;
+    margin-left: 20px;
+}
+
+button a {
+    text-decoration: none;
+    font-size: 20px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: white;
+}
+
+/* services */
+.services {
+    text-align: center;
 }
