--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ h1 {
 .col-sm-8 p {
     font-size: 25px;
     text-align: justify;
+    padding-top: 10px;
 }
 
 /* button */
@@ -30,7 +31,24 @@ button a {
 .services {
     text-align: center;
 }
-.col-sm-4 img {
-    width: 25px;
-    height: 25px;
+
+.services p {
+    padding-top: 10px;
+    font-size: 20px;
+}
+
+/* .service_images {
+    width: 70px;
+    height: 70px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}  */
+
+/* heading 3 */
+h3 {
+    font-size: 28px;
+    text-align: center;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    margin-top: 20px;
 }
