--- a/css/style.css
+++ b/css/style.css
@@ -37,13 +37,6 @@ button a {
     font-size: 20px;
 }
 
-/* .service_images {
-    width: 70px;
-    height: 70px;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-}  */
 
 /* heading 3 */
 h3 {
@@ -51,4 +44,11 @@ h3 {
     text-align: center;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     margin-top: 20px;
+    font-weight: bold;
+}
+.col-sm-4 p a {
+    text-decoration: none;
+    font-size: 20px;
+    text-align: center;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
