--- a/css/style.css
+++ b/css/style.css
@@ -46,9 +46,20 @@ h3 {
     margin-top: 20px;
     font-weight: bold;
 }
-.col-sm-4 p a {
+/* .col-sm-4 p a {
     text-decoration: none;
     font-size: 20px;
     text-align: center;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    color: white;
+    text-align: justify;
+} */
+
+.serv_p {
+    text-decoration: none;
+    text-align: center;
+    color: white;
+    font-size: 16px;
+    text-align: justify;
+
 }
