--- a/css/style.css
+++ b/css/style.css
@@ -31,3 +31,10 @@ h3 {
     margin-top: 20px;
     font-weight: bold;
 }
+
+.rating {
+    width: 70px;
+    height: 70px;
+    border-radius: 5px;
+    
+}
