--- a/css/style.css
+++ b/css/style.css
@@ -38,3 +38,15 @@ h3 {
     border-radius: 5px;
     
 }
+
+
+/* footer */
+.socials img {
+    width: 25px;
+    height: 25px;
+    margin-right: 10px;
+}
+.socials ul li {
+ list-style-type: none;
+ 
+}
