--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,6 @@ h3 {
     width: 70px;
     height: 70px;
     border-radius: 5px;
-    
 }
 
 
@@ -66,4 +65,11 @@ h3 {
 }
 .media {
     padding-left: 26px;
+}
+.paragraph {
+    font-size: 20px;
+    text-align: justify;
+    font-family: century gothic ;
+    color: rgb(207, 210, 213);
+    padding-left: 20px;
 }
