--- a/css/style.css
+++ b/css/style.css
@@ -73,3 +73,13 @@ h3 {
     color: rgb(207, 210, 213);
     padding-left: 20px;
 }
+
+/* styling for portfolio pages */
+/* portfolio */
+.portfoliobuttons button {
+    width: 150px;
+    height: 40px;
+    padding-left: 10px;
+    margin-right: 10px;
+    background-color: rgb(64, 77, 64);
+}
