--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,6 @@ h3 {
 .portfoliobuttons button {
     width: 150px;
     height: 40px;
-    padding-left: 10px;
-    margin-right: 10px;
+    margin-left: 50px;
     background-color: rgb(64, 77, 64);
 }
