--- a/css/style.css
+++ b/css/style.css
@@ -83,3 +83,16 @@ h3 {
     background-color: rgb(64, 77, 64);
 }
 
+.websites {
+    display: flex;
+    flex-wrap: wrap;
+}
+.websites div {
+    width: 25%;
+    padding: 5px;
+}
+.websites img {
+    width: 300px;
+    height: 250px;
+    border-radius: 1px;
+}
