--- a/css/style.css
+++ b/css/style.css
@@ -97,9 +97,15 @@ h3 {
     border-radius: 1px;
 }
 .websites img:hover{
-    border: 2px solid;
+    border: 3px solid;
 }
-.websites p a {
+.websites a {
     text-decoration: none;
     text-align: center;
+    font-size: x-large;
+    color: white;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+.websites a:hover {
+    color: rgb(136, 134, 131);
 }
