--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ button a {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: white;
 }
-.row p:hover{
+.row p a:hover{
     background-color: rgb(28, 28, 29);
     border-radius: 2px;
 }
